# data_agent_proj_extended

./: .gitignore  Dockerfile  README.md  Untitled  api.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
src/: agent.py  app.py  data_loader.py  database.py  main.py
src/tools/: __init__.py  _shared.py  clustering.py  data_quality.py  outliers.py  pandas_tool.py  patterns.py  sql_tool.py  stats.py  time_series.py  validation.py
tests/: conftest.py  test_agent.py  test_data_loader.py  test_tools.py
